--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root_passv.1.1",
-    "database": "lokal360",
+    "database": "lokal360_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
