Configured Multer (Successfully Uploaded Image)
- made changes to authorization middleware for shopInfo route
- increased accessToken life span from 5m to 15m

ISSUES: (TO FIX)
- image is not deleted after update
- problem in accessing image in front end
- add a new getImage route (Secured and Non-secured)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 node_modules
 .env
+
+uploads/shop/logoAndHeader/*
+!uploads/shop/logoAndHeader/.gitignore
+uploads/shop/product/*
+!uploads/shop/product/.gitignore
+uploads/shop/variation/*
+!uploads/shop/variation/.gitignore
