Fixed Typo and Fixed Image Upload

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 node_modules
 .env
+localhost-key.pem
+localhost.pem
+rootCA-key.pem
+rootCA.pem
 
 uploads/shop/logoAndHeader/*
 !uploads/shop/logoAndHeader/.gitignore
