Shopper Delivery Address / Update Profile
- also made modifications to the database schema of Chat, Inbox, and DeliveryAddress

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ uploads/shop/variation/*
 !uploads/shop/variation/.gitignore
 uploads/shop/ads/*
 !uploads/shop/ads/.gitignore
+uploads/user/profilePic/*
+!uploads/user/profilePic/.gitignore
