Reworked Search API for Shopper Side

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ uploads/user/profilePic/*
 !uploads/user/profilePic/.gitignore
 uploads/shop/documents/*
 !uploads/shop/documents/.gitignore
+uploads/category/*
+!uploads/category/.gitignore
